<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/txtSignUpTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:paddingTop="20dp"
        android:text="@string/singup_pls"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:textStyle="bold" />
    <LinearLayout
        android:id="@+id/lineform"
        android:layout_below="@+id/txtSignUpTitle"
        android:padding="10dp"
        android:background="@drawable/bolder_linerlayout"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_centerHorizontal="true"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnSignUp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="3"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:text="@string/namedevice"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_height="0dp" />
            <TextView
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/time_using"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp" />
            <TextView
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_width="match_parent"
                android:text="@string/codecompany"
                android:layout_weight="1"
                android:layout_height="0dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:orientation="vertical"
            android:weightSum="3"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/editNameDevice"
                android:hint="@string/nameofdevice"
                android:layout_width="match_parent"
                android:textColorHint="@color/colorHint"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:textColor="@color/colorYellow"
                android:gravity="center"
                style="@android:style/Widget.DeviceDefault.Light.EditText" />
            <EditText
                android:id="@+id/editTimeUsing"
                android:hint="@string/timeofusing"
                android:layout_width="match_parent"
                android:textColor="@color/colorYellow"
                android:gravity="center"
                android:textColorHint="@color/colorHint"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:inputType="numberDecimal" />
            <EditText
                android:id="@+id/editCodeCompany"
                android:hint="@string/codeofcompany"
                android:layout_width="match_parent"
                android:textColorHint="@color/colorHint"
                android:layout_weight="1"
                android:textColor="@color/colorYellow"
                android:gravity="center"
                android:layout_height="0dp" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btnSignUp"
        android:layout_alignParentBottom="true"
        android:text="@string/singup"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

</RelativeLayout>